# govuk-frontend-django

./: .gitignore  404.html  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  pytest.ini  settings.py  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: ci.yml  docs.yml  test.yml  updates.yml
contributing/: index.html
contributing/govuk-frontend/: index.html
docs/: .pages  index.md  mkdocs.yml  python-components.md  templates.md
docs/contributing/: govuk-frontend.md  index.md
docs/template-tags/: accordion.md  breadcrumbs.md  cookie-banner.md  error-summary.md  footer.md  header.md  index.md  pagination.md  phase-banner.md  summary-list.md  summary_list.md  table.md  tabs.md
example_project/: Makefile  README.md  package-lock.json  package.json  pyproject.toml
example_project/example/: settings.py  urls.py  views.py
example_project/example/templates/: base.html
example_project/example/templates/example/: templatetags.html  user_listing.html
example_project/static/css/: styles.css  styles.css.map  styles.scss
govuk_frontend_django/components/: accordion.py  back_link.py  base.py  breadcrumbs.py  button.py  character_count.py  checkboxes.py  cookie_banner.py  date_input.py  details.py  error_message.py  error_summary.py  exit_this_page.py  fieldset.py  file_upload.py  footer.py  header.py  hint.py  input.py  inset_text.py  label.py  notification_banner.py  pagination.py  panel.py  password_input.py  phase_banner.py  radios.py  select.py  service_navigation.py  skip_link.py  summary_list.py  table.py  tabs.py  tag.py  task_list.py  textarea.py  warning_text.py
govuk_frontend_django/templates/govuk_frontend_django/: base.html
govuk_frontend_django/templatetags/govuk_frontend_django/: __init__.py  accordion.py  breadcrumbs.py  checkboxes.py  cookie_banner.py  error_summary.py  footer.py  header.py  pagination.py  phase_banner.py  summary_list.py  table.py  tabs.py
govuk_frontend_django/tests/: test_templatetags.py
python-components/: index.html
scripts/: generate_components.py
search/: search_index.json
template-tags/: index.html
template-tags/accordion/: index.html
template-tags/breadcrumbs/: index.html
template-tags/cookie-banner/: index.html
template-tags/error-summary/: index.html
template-tags/footer/: index.html
template-tags/header/: index.html
template-tags/pagination/: index.html
template-tags/phase-banner/: index.html
template-tags/summary-list/: index.html
template-tags/table/: index.html
template-tags/tabs/: index.html
templates/: index.html
