[tool.poetry]
name = "govuk-frontend-django-example-project"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.11"
govuk-frontend-django = { path = "../", develop = true }
govuk-frontend-jinja = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"
indent = "4"
ignore = "H021,H006"
exclude = "node_modules,staticfiles,static"
custom_blocks = "gds_accordion,gds_accordion_item,gds_breadcrumbs,gds_checkboxes,gds_checkbox_conditional,gds_cookie_banner,gds_cookie_banner_message,gds_error_summary,gds_error_summary_error_list_item,gds_footer,gds_footer_nav,gds_footer_meta,gds_header,gds_header_nav_item,gds_phase_banner,gds_summary_list,gds_summary_list_row,gds_summary_list_row_key,gds_summary_list_row_value,gds_summary_list_row_actions,gds_summary_list_row_actions_item,gds_summary_list_card,gds_summary_list_card_actions,gds_summary_list_card_actions_item,gds_tabs,gds_tabs_tab"
